--- a/kaskad/css/mnemo-hvo.css
+++ b/kaskad/css/mnemo-hvo.css
@@ -1039,65 +1039,77 @@ body {
 }
 
 .mnemo__gif-img {
-  width: 38px;
-  height: 34px;
+  width: 31px;
+  height: 31px;
+  animation: rotate 1s infinite linear;
+  animation-play-state: paused;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .mnemo__gif-pump-1-1 {
-  left: 17.1%;
-  top: 14.2%;
+  left: 17.4%;
+  top: 14.3%;
 }
 
 .mnemo__gif-pump-1-2 {
-  left: 17.1%;
-  top: 20.2%;
+  left: 17.4%;
+  top: 20.4%;
 }
 
 .mnemo__gif-pump-2-1 {
-  bottom: 23%;
-  right: 20.4%;
+  bottom: 23.1%;
+  right: 20.6%;
 }
 
 .mnemo__gif-pump-2-2 {
-  bottom: 17.5%;
-  right: 20.4%;
+  bottom: 17.7%;
+  right: 20.6%;
 }
 
 /* mnemo gif hvo2 */
 
 .mnemo__gif-pump-4-1 {
-  bottom: 18.5%;
-  left: 5.3%;
+  bottom: 18.7%;
+  left: 5.7%;
 }
 
 .mnemo__gif-pump-4-2 {
-  bottom: 18.5%;
-  left: 18.1%;
+  bottom: 18.7%;
+  left: 18.5%;
 }
 
 .mnemo__gif-pump-5-1 {
-  bottom: 18.5%;
-  left: 31%;
+  bottom: 18.7%;
+  left: 31.3%;
 }
 
 .mnemo__gif-pump-5-2 {
-  bottom: 18.5%;
-  left: 43.8%;
+  bottom: 18.7%;
+  left: 44.1%;
 }
 
 .mnemo__gif-pump-6-1 {
-  bottom: 18.5%;
-  right: 40.2%;
+  bottom: 18.7%;
+  right: 40.4%;
 }
 
 .mnemo__gif-pump-6-2 {
-  bottom: 18.5%;
-  right: 27.4%;
+  bottom: 18.7%;
+  right: 27.6%;
 }
 
 .mnemo__gif-pump-6-3 {
-  bottom: 18.5%;
-  right: 14.6%;
+  bottom: 18.7%;
+  right: 14.8%;
 }
 
 /* ----------------------------------------------------------------------- */
@@ -1189,8 +1201,8 @@ body {
   }
 
   .mnemo__gif-img {
-    width: 30px;
-    height: 27px;
+    width: 25px;
+    height: 25px;
   }
 
 
