--- a/kaskad/css/mnemo-hvo.css
+++ b/kaskad/css/mnemo-hvo.css
@@ -527,6 +527,258 @@ body {
   right: 0%;
 }
 
+/* Кнопка модального окна с документацией */
+.mnemo__param-box-docs--btns {
+  position: absolute;
+  top: -25px;
+  left: 315px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
+
+/* Модальное окно */
+
+/* --------------------Модальное окно-------------------- */
+
+.mnemo__modal-background {
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  z-index: -3;
+  cursor: default;
+}
+
+.mnemo__modal-background.enabled {
+  cursor: pointer;
+  opacity: 1;
+  z-index: 3;
+  transition: opacity .5s ease-in-out;
+}
+
+.mnemo__modal-active {
+  padding: 20px;
+
+  position: absolute;
+  max-width: 780px;
+  width: 100%;
+  /* height: 50px; */
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 3px 6px, rgba(0, 0, 0, 0.7) 0px 3px 6px;
+
+  cursor: default;
+}
+
+.mnemo__modal-active.enabled {
+  height: 100%;
+  max-height: 600px;
+  transition: height .4s ease-in-out;
+}
+
+.mnemo__modal-title {
+  padding-bottom: 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid gray;
+}
+
+.mnemo__modal-title-text {
+  position: relative;
+  font-size: 28px;
+  font-family: 'Bitter', sans-serif;
+  line-height: 24px;
+  color: black;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.mnemo__modal-window {
+  padding-top: 20px;
+  overflow-y: auto;
+  height: 80%;
+}
+
+.mnemo__modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 35px;
+  height: 35px;
+  transition: opacity .3s ease-in-out;
+}
+
+.mnemo__modal-close:hover {
+  opacity: 0.5;
+}
+
+.mnemo__modal-close:active {
+  opacity: 0.5;
+}
+
+.modal-content__box {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-content__link {
+  position: relative;
+  font-size: 16px;
+  line-height: 24px;
+  color: black;
+  font-weight: 500;
+  font-family: 'Bitter', sans-serif;
+}
+
+.modal-content__link-download {
+  padding: 6px 10px;
+  font-size: 15px;
+  line-height: 14px;
+  color: green;
+  font-weight: 500;
+  font-family: 'Bitter', sans-serif;
+  text-decoration: none;
+  border: 2px solid green;
+  transition: color .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+.modal-content__link-download:first-child {
+  border-right: none;
+}
+
+.modal-content__link-download:hover {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download:active {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download:focus {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download--one:first-child {
+  border-right: 2px solid green;
+}
+
+.modal-content__link-download-solo {
+  padding: 6px 10px;
+  font-size: 15px;
+  line-height: 14px;
+  color: green;
+  font-family: 'Bitter', sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  border: 2px solid green;
+  transition: color .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+
+
+.modal-content__link-download-solo:hover {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download-solo:active {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-download-solo:focus {
+  background-color: green;
+  color: white;
+}
+
+.modal-content__link-container {
+  display: flex;
+  flex-shrink: 0;
+}
+
+.modal-content__link-container.active {
+  display: none;
+}
+
+.modal__accordion {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.modal__accordion-title {
+  display: block;
+  padding: 3px;
+  cursor: pointer;
+  font-family: 'Bitter', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  color: green;
+  background-color: white;
+
+  border: 1px green solid;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.modal__accordion-title:hover {
+  color: white;
+  background-color: green;
+}
+
+.modal__accordion-title:active {
+  color: white;
+  background-color: green;
+}
+
+.modal__accordion-title.enabled {
+  color: white;
+  background-color: green;
+}
+
+
+.modal__accordion-content {
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-right: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-height: 0px;
+  font-size: 30px;
+  line-height: 36px;
+  list-style-type: none;
+  transition: max-height .3s ease-in-out;
+  overflow: hidden;
+}
+
+.modal__accordion-content-item {
+  margin-bottom: 23px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-content__link {
+  margin-right: 30px;
+}
+
 /* --------------------Всплывающие подсказки-------------------- */
 
 .mnemo__param-box--btns {
@@ -578,11 +830,33 @@ body {
   border-radius: 15px;
 }
 
+.mnemo__param-clue-another {
+  position: relative;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(240, 238, 238);
+  border: 2px solid green;
+  border-radius: 15px;
+}
+
 .mnemo__param-clue-content::after {
   content: '';
   position: absolute;
   bottom: -14px;
   left: 50%;
+  z-index: -1;
+  width: 25px;
+  height: 25px;
+  background-color: green;
+  transform: rotate(45deg) translateX(-50%);
+}
+
+.mnemo__param-clue-another::after {
+  content: '';
+  position: absolute;
+  bottom: 67px;
+  right: -8%;
   z-index: -1;
   width: 25px;
   height: 25px;
@@ -701,7 +975,111 @@ body {
   top: -96px;
 }
 
-/* position parametrs HVO2 */
+/* tooltips HVO2 */
+
+.davlenie-carbon-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-k265-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-k312-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n4-1-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n4-2-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n5-1-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n5-2-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n6-1-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n6-2-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-n6-3-clue {
+  width: 190px;
+  left: -59px;
+  top: -96px;
+}
+
+.davlenie-posle-filtrov-clue {
+  width: 190px;
+  left: -47px;
+  top: -96px;
+}
+
+.temper-e2-1-sever-clue {
+  width: 170px;
+  left: -53px;
+  top: -96px;
+}
+
+.temper-e2-1-ug-clue {
+  width: 170px;
+  left: -53px;
+  top: -96px;
+}
+
+.temper-e2-2-sever-clue {
+  width: 170px;
+  left: -53px;
+  top: -96px;
+}
+
+.temper-e2-2-ug-clue {
+  width: 170px;
+  left: -53px;
+  top: -96px;
+}
+
+.rashod-kanalizacia-clue {
+  width: 200px;
+  left: -68px;
+  top: -209px;
+}
+
+.rashod-vody-filtr-clue {
+  width: 200px;
+  left: -210px;
+  top: -97px;
+}
+
+/* parameters */
 
 .rashod-vody-filtr {
   padding: 2px 3px;
